Increase code quality (#205)
* Use Stream#toList

* Fix MarkDown auto-formatting

* Enhance deprecation annotations

* Remove scoverage report  path from sonarqube settings, as currently scoverage is not working

* Configure jacoco

* Increasing coverage

* Update CHANGELOG.md