@@ -238,7 +238,7 @@ public class GeoUtils {
    * @return Deep copy of the {@code relation} with closed ways
    * @deprecated This method is currently not under test and has to be revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   public static Relation buildClosedWays(Relation relation) throws GeoPreparationException {
     /* Copy relation and empty the Members */
     Relation closedRelation = DeepCopy.copy(relation);
@@ -253,7 +253,7 @@ public class GeoUtils {
         relation.getMembers().stream()
             .filter(e -> e.getEntity() instanceof Way)
             .map(e -> (Way) e.getEntity())
-            .collect(Collectors.toList());
+            .toList();
 
     /* Get an idea, of which ways do have intersections and where */
     HashMap<Node, Set<Way>> intersections = new HashMap<>();
@@ -303,7 +303,7 @@ public class GeoUtils {
             intersections.entrySet().stream()
                 .filter(e -> e.getValue().contains(currentWay))
                 .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
+                .toList();
         Node secondIntersection;
         if (candidateNodes.size() > 1)
           throw new GeoPreparationException(
@@ -372,7 +372,7 @@ public class GeoUtils {
    * @deprecated ATTENTION! DON'T REMOVE: This method is currently not under test and has to be
    *     revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   public static Polygon buildConvexHull(
       Set<Point> points, int precision, ConvexHullAlgorithm algorithm)
       throws GeoPreparationException {
@@ -566,12 +566,10 @@ public class GeoUtils {
    * @deprecated ATTENTION! DON'T REMOVE: This method is currently not under test and has to be
    *     revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   public static Polygon getIntersection(Polygon a, Polygon b) {
-    List<LatLon> sharedCoords =
-        a.getCoords().stream().filter(b::contains).collect(Collectors.toList());
-    List<LatLon> additionalCoords =
-        b.getCoords().stream().filter(a::contains).collect(Collectors.toList());
+    List<LatLon> sharedCoords = a.getCoords().stream().filter(b::contains).toList();
+    List<LatLon> additionalCoords = b.getCoords().stream().filter(a::contains).toList();
 
     if (sharedCoords.isEmpty() && additionalCoords.isEmpty()) return null;
     else {
@@ -615,7 +613,7 @@ public class GeoUtils {
    * @deprecated ATTENTION! DON'T REMOVE: This method is currently not under test and has to be
    *     revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   public static Quantity<Area> calcArea(Way w) throws GeoPreparationException {
     if (!w.isClosed())
       throw new GeoPreparationException(
@@ -633,7 +631,7 @@ public class GeoUtils {
    * @deprecated ATTENTION! DON'T REMOVE: This method is currently not under test and has to be
    *     revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   public static Quantity<Area> calcArea(Polygon p) throws GeoPreparationException {
     /* Get the boundary of the Polygon */
     Bounds bounds = p.getBounds();
@@ -734,7 +732,7 @@ public class GeoUtils {
    * @deprecated ATTENTION! DON'T REMOVE: This method is currently not under test and has to be
    *     revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   public static boolean isBetween(Node a, Node b, Node c) {
     double crossProduct;
     double dotProduct;
@@ -779,7 +777,7 @@ public class GeoUtils {
    * @deprecated ATTENTION! DON'T REMOVE: This method is currently not under test and has to be
    *     revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   public static Quantity<Area> calcGeo2qmNew(double geoArea, Quantity<Area> cor) {
     double width = 51.5;
     double length = 7.401;
@@ -814,7 +812,7 @@ public class GeoUtils {
    * @deprecated ATTENTION! DON'T REMOVE: This method is currently not under test and has to be
    *     revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   public static boolean isInsideLanduse(LatLon node, List<Way> landUses) {
     for (Way landUse : landUses) {
       if (rayCasting(new Polygon(landUse), node)) return true;
@@ -826,7 +824,7 @@ public class GeoUtils {
    * @deprecated ATTENTION! DON'T REMOVE: This method is currently not under test and has to be
    *     revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   public static boolean rayCasting(Polygon shape, LatLon node) {
     boolean inside = false;
 
@@ -843,7 +841,7 @@ public class GeoUtils {
    * @deprecated ATTENTION! DON'T REMOVE: This method is currently not under test and has to be
    *     revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   private static boolean intersects(LatLon aIn, LatLon bIn, LatLon nIn) {
 
     // convert LatLons to arrays
@@ -875,7 +873,7 @@ public class GeoUtils {
    * @deprecated ATTENTION! DON'T REMOVE: This method is currently not under test and has to be
    *     revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   public static double calculateBuildingArea(Way building) {
     double area = 0.0;
 
@@ -913,9 +911,7 @@ public class GeoUtils {
     List<LatLon> circlePoints = radiusWithCircle(center, radius);
 
     List<LatLon> circlePointsLatLon =
-        circlePoints.stream()
-            .map(point -> new LatLon(point.getLat(), point.getLon()))
-            .collect(Collectors.toList());
+        circlePoints.stream().map(point -> new LatLon(point.getLat(), point.getLon())).toList();
 
     return new Polygon(circlePointsLatLon);
   }
@@ -930,7 +926,7 @@ public class GeoUtils {
    * @deprecated ATTENTION! DON'T REMOVE: This method is currently not under test and has to be
    *     revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   public static List<LatLon> radiusWithCircle(LatLon center, Quantity<Length> radius) {
 
     double lat1 = Math.toRadians(center.getLat());
@@ -970,7 +966,7 @@ public class GeoUtils {
    * @deprecated ATTENTION! DON'T REMOVE: This method is currently not under test and has to be
    *     revised thoroughly
    */
-  @Deprecated
+  @Deprecated(since = "1.4", forRemoval = false)
   public static Way wayFromWays(List<Way> waysToChain, Quantity<Length> radius, int wayId) {
 
     LinkedList<Way> waysCopy = new LinkedList<>(waysToChain);
